reworked ResourceTools to resolve files
  fixed code to allow to resolve existing/non existing files/folders.
  Removed some obsolete methods

reworked script repository code

  Renamed repository components to be clearer

changed API for ResourcesModule

  New API implemented: removed RANDOM_ACCESS files. Now files are
  automatically created in write mode. All access methods work with
  handles, paths or file instances

Change-Id: If87397966feac5dd5a981a7f7e458450b8ad9a30